--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,12 +21,13 @@
     "bignumber": "^1.1.0",
     "crypto-browserify": "^3.12.0",
     "http-browserify": "^1.7.0",
+    "rc-table": "^7.30.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
     "react-scripts": "^2.1.3",
-    "react-table-ui": "^0.1.6",
+    "react-table": "^7.8.0",
     "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2"
+    "@babel/preset-env": "^7.20.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0"
   }
 }
