--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-modal": "^3.16.1",
     "react-scripts": "^2.1.3",
     "react-table": "^7.8.0",
+    "react-tooltip": "^5.7.5",
     "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
