--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
+    "react-multi-switch-toggle": "^1.0.12",
     "react-scripts": "^2.1.3",
     "react-table": "^7.8.0",
     "react-tooltip": "^5.7.5",
